<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background_button">

    <ImageView
        android:id="@+id/dialog_close_nagad"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="right"
        android:src="@drawable/cancel">
    </ImageView>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:elevation="5dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/payment_receipt_nagad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="150dp"
                                android:layout_height="80dp"
                                android:src="@drawable/ic_nagad">
                            </ImageView>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="70dp"
                                android:src="@drawable/cbbl_logo">
                            </ImageView>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="20dp"
                                android:text="@string/bank_location"
                                android:textAlignment="center">
                            </TextView>

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="30dp">
                    </View>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/report_heading"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textAllCaps="true"
                        android:textAlignment="center">
                    </TextView>

                    <!--logo-end-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:orientation="horizontal"
                        android:background="@color/lighter_gray">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/source_account_card"
                            android:textStyle="bold"
                            android:textSize="13sp"
                            android:textColor="@color/black">
                        </TextView>

                        <TextView
                            android:id="@+id/src_acc_no_nagad"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAlignment="textEnd"
                            android:text="00125469785466"
                            android:textSize="13sp"
                            android:textStyle="bold"
                            android:textColor="@color/black">
                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:padding="5dp"
                            android:layout_marginLeft="20dp"
                            android:orientation="vertical"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/amount"
                                android:textSize="13sp">
                            </TextView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/date_time"
                                android:textSize="13sp">
                            </TextView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/narration"
                                android:textSize="13sp">
                            </TextView>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:padding="5dp"
                            android:layout_marginRight="20dp"
                            android:orientation="vertical"
                            android:gravity="end"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/amount_nagad"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="BDT 60.00"
                                android:textSize="13sp">
                            </TextView>

                            <TextView
                                android:id="@+id/date_time_nagad"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="2022-07-25 02:01:02"
                                android:textSize="13sp">
                            </TextView>

                            <TextView
                                android:id="@+id/narration_nagad"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="call of duty"
                                android:textSize="13sp">
                            </TextView>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:orientation="horizontal"
                        android:background="@color/lighter_gray">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tran_info"
                            android:textStyle="bold"
                            android:textSize="13sp"
                            android:textColor="@color/black">
                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:padding="5dp"
                            android:layout_marginLeft="20dp"
                            android:orientation="vertical"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Nagad Number"
                                android:textSize="13sp">
                            </TextView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/name"
                                android:textSize="13sp">
                            </TextView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/loc"
                                android:textSize="13sp">
                            </TextView>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:padding="5dp"
                            android:layout_marginRight="20dp"
                            android:orientation="vertical"
                            android:gravity="end"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/nagad_no"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="012568977142574"
                                android:textSize="13sp">
                            </TextView>

                            <TextView
                                android:id="@+id/name_nagad"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="Monirul Islam"
                                android:textSize="13sp">
                            </TextView>

                            <TextView
                                android:id="@+id/address_nagad"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="TXN486 Dhaka Bangladesh"
                                android:textSize="13sp"
                                android:textAllCaps="true">
                            </TextView>

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/lighter_gray"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/successseal"
                            android:alpha="0.5"
                            android:layout_gravity="right">
                        </ImageView>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <Button
                        android:id="@+id/download_nagad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:text="@string/download_btn"
                        android:textSize="10sp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/background_button">
                    </Button>

                    <Button
                        android:id="@+id/share_nagad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/share_btn"
                        android:textSize="10sp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/background_button">
                    </Button>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>

</LinearLayout>